tests/spec/compile-pass/034_try_option_and_error_mapping.zn
// category: compile-pass
// profile: freestanding
// purpose: try supports Option propagation and explicit Result error mapping

module tests.pass.tryOptionAndErrorMapping;

import core.option.{Option, Some, None};
import core.result.{Result, Ok, Err};

enum IoError {
    Missing,
}

enum ParseError {
    Empty,
    OutOfRange,
    Io(IoError),
}

fn firstByte(bytes: ArraySlice<U8>) -> Option<U8> {
    if (bytes.len == 0) {
        return None;
    }
    return Some(bytes[0]);
}

fn secondByte(bytes: ArraySlice<U8>) -> Option<U8> {
    val first = try firstByte(bytes);
    if (bytes.len < 2) {
        return None;
    }
    return Some(first + bytes[1]);
}

fn parseByte(value: U32) -> Result<U8, ParseError> {
    val byte = try U8.fromChecked(value).okOr(ParseError.OutOfRange);
    return Ok(byte);
}

fn parseByteLazy(value: U32) -> Result<U8, ParseError> {
    val byte = try U8.fromChecked(value).okOrElse(() => ParseError.OutOfRange);
    return Ok(byte);
}

fn fallbackByte(value: U32) -> U8 {
    return U8.fromChecked(value).unwrapOrElse(() => 255);
}

fn readRaw() -> Result<U8, IoError> {
    return Err(IoError.Missing);
}

fn readMapped() -> Result<U8, ParseError> {
    val byte = try readRaw().mapErr(ParseError.Io);
    return Ok(byte);
}
